gitops/lms/lyrion-music-server/templates/lb-service.yaml
# Need to split into two services to expose the port 3483 on both TCP and UDP
# See metallb doc on how to have the same IP for two services
# https://metallb.universe.tf/usage/#ip-address-sharing
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: lyrion-music-server-metallb
  name: lyrion-music-server-metallb-tcp
  namespace: lms
spec:
  ports:
    - name: main
      port: 9000
    - name: cli
      port: 9090
    - name: slimprototcp
      port: 3483
      protocol: TCP
  selector:
    app.kubernetes.io/instance: lyrion-music-server
    app.kubernetes.io/name: lyrion-music-server
    pod.name: main
  type: LoadBalancer
  loadBalancerIP: 192.168.1.19
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: lyrion-music-server-metallb
  name: lyrion-music-server-metallb-udp
  namespace: lms
spec:
  ports:
    - name: slimprotoudp
      port: 3483
      protocol: UDP
  selector:
    app.kubernetes.io/instance: lyrion-music-server
    app.kubernetes.io/name: lyrion-music-server
    pod.name: main
  type: LoadBalancer
  loadBalancerIP: 192.168.1.19
