gitops/lms/lyrion-music-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
  name: lms
  namespace: lms
spec:
  ingressClassName: traefik
  rules:
  - host: lms.dixneuf19.fr
    http:
      paths:
      - backend:
          service:
            name: lyrion-music-server
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lms.dixneuf19.fr
    secretName: lms-dixneuf19-fr-tls
